@@ -73,6 +73,20 @@ div#navigation table {
 </li>
 <li>
 <p><strong>Boost:</strong> async_mqtt only works with Boost, not stand-alone Asio</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Boost 1.84.0 or later</p>
+<div class="ulist">
+<ul>
+<li>
+<p>If you don&#8217;t build test, Boost 1.82.0 or later</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p><strong>OpenSSL:</strong> If you need TLS connection.</p>
