@@ -53,7 +53,7 @@ if(ASYNC_MQTT_USE_TLS AND ASYNC_MQTT_USE_WS)
     )
 endif()
 
-find_package(Boost 1.81.0 REQUIRED COMPONENTS unit_test_framework)
+find_package(Boost 1.84.0 REQUIRED COMPONENTS unit_test_framework)
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     link_directories(${Boost_LIBRARY_DIRS})
 endif()
